--- a/src/CSS/Scroll.css
+++ b/src/CSS/Scroll.css
@@ -12,3 +12,23 @@
 .scrollbar-hide::-webkit-scrollbar {
     display: none;
 }
+
+@keyframes shake {
+    0%,
+    100% {
+        transform: translateY(0);
+    }
+    20%,
+    60% {
+        transform: translateY(-5px);
+    }
+    40%,
+    80% {
+        transform: translateY(5px);
+    }
+}
+
+.animate-shake {
+    display: inline-block;
+    animation: shake 2.5s ease-in-out infinite;
+}
